--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.1.2
   string_validator: ^1.1.0
   go_router: ^14.1.4
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
 
 
 dev_dependencies:
